--- a/CQC/題目/單元1~4.md
+++ b/CQC/題目/單元1~4.md
@@ -1,6 +1,24 @@
 # P1_輸入與輸出
 
 
+1.coding=utf-8是何用意?
+(A)讓中文正常顯示
+(B)好看
+(C)避免編譯錯誤
+(D)程式效能提升
+
+2.用input()函式輸入的值,型態為何?
+(A)數字
+(B)文字
+(C)字元陣列
+(D)浮點數(float)
+
+
+
+4.eval()函式功能為何?
+5.print()函式功能為何?
+
+
 
 
 
