--- a/CQC/題目/單元1~4.md
+++ b/CQC/題目/單元1~4.md
@@ -8,15 +8,22 @@
 (D)程式效能提升
 
 2.用input()函式輸入的值,型態為何?
-(A)數字
-(B)文字
-(C)字元陣列
-(D)浮點數(float)
+(A)依輸入而定
+(B)字元
+(C)字串
+(D)整數
 
+4.用eval()函式轉換出來的型態為何?
+(A)浮點數
+(B)整數
+(C)數值
+(D)以上皆是
 
-
-4.eval()函式功能為何?
-5.print()函式功能為何?
+5.用print()函式功能,何者為非?
+(A)可放入運算式,並且將結果列印出來
+(B)
+(C)
+(D)
 
 
 
